--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Prom 2020</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="C:\Users\theaw\Documents\GitHub\mcprom.net\styles\styles.css">
+        <link rel="stylesheet" href="\styles\styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
