--- a/404.html
+++ b/404.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1 style="text-align: left; font-size: 30px; margin: 30px; background-color: rgba(0, 0, 0, 0.5);">
-        Sorry we couldn't find that page.<br>Head back to our <a href="https://www.mcprom.net">homepage</a> for more information!</h1>
+        Sorry we couldn't find that page.<br>Head back to our <a href="https://mcprom.net/">homepage</a> for more information!</h1>
 </body>
 </html>
