--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="black">
         <title>Minecraft Prom 2020</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- Primary Meta Tags -->
