Added Donation Goals

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
+        <iframe
+            src="https://overlay.tiltify.com/@xessdx/2020-wilsonville-high-school-minecraft-prom-for-good/beta"></iframe>
         <header>
             <p style="font-size: 24px;">IP: server.mcprom.net</p>
         </header>
