--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </p>
             <h2 style="text-align: left;">How to listen along</h2>
             <p>
-                Press "T" and then follow the link in-game or type "/audio" to launch OpenAudioMC which will play music through your browser.
+                Press "T" and then follow the link in-game or type "/audio" to launch OpenAudioMC which will play music through your browser. <b>(Please note this will not work with Safari)<b>
             </p>
             <h2 style="text-align: left;">What to wear</h2>
             <p>
